--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
 :root {
-    --background-color: ;
+    --background-color: #F0EBE3;
     --header-color: ;
     --font-color: ;
-    --tile-background: ;
-    --board-hover: ;
+    --tile-background: #E4DCCF;
+    --board-hover: #F0EBE3;
+    --button-color: #7D9D9C;
+    --button-active: #576F72;
+
 }
 
 * {
@@ -49,9 +52,37 @@ body {
 .position {
     width: 150px;
     height: 150px;
+    background-color: var(--tile-background);
+    text-align: center;
+    user-select: none;
+}
 
+.field-hover {
+    background-color: var(--board-hover);
+}
+
+.center {
+    display: flex;
+    justify-content: center;
+    padding: 25px;
+}
+
+.reset-button {
+    padding: 10px 20px;
+    border-radius: 7px;
+    font-size: 50px;
+    background-color: var(--button-color);
+}
+
+.reset-button:hover {
+    background-color: var(--button-hover);
+}
+
+.reset-button:active {
+    background-color: var(--button-active)
 }
 
 /* header */
 
 /* footer */
+
