--- a/style.css
+++ b/style.css
@@ -3,13 +3,15 @@
     --header-color: #F0EBE3;
     --font-color: black;
     --tile-background: #E4DCCF;
-    --board-hover: #F0EBE3;
+    --tile-hover: #F0EBE3;
     --button-color: #7D9D9C;
     --button-active: #576F72;
 
 }
 
-* {
+*,
+*::after,
+*::before {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
@@ -36,20 +38,20 @@ body {
 
 .message {
     padding: 30px 0;
-    font-size: 50px;
+    font-size: 20px;
     text-align: center;
 }
 
-.gameboard {
+.board {
     display: grid;
     grid-template-columns: repeat(3 1fr);
-    width: 500px;
-    height: 500px;
+    width: 454px;
+    height: 454px;
     border: 2px solid var(--border-color);
     margin: 0px auto;
 }
 
-.position {
+.tile {
     width: 150px;
     height: 150px;
     background-color: var(--tile-background);
@@ -57,11 +59,11 @@ body {
     user-select: none;
 }
 
-.field-hover {
-    background-color: var(--board-hover);
+.tile:hover {
+    background-color: var(--tile-hover);
 }
 
-.center {
+.button-container {
     display: flex;
     justify-content: center;
     padding: 25px;
