--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body {
     font-family: var(--font);
     line-height: 1.6;
     margin-bottom: 100px;
+    display: flex;
 }
 
 /* body */
@@ -44,11 +45,14 @@ body {
 
 .board {
     display: grid;
-    grid-template-columns: repeat(3 1fr);
+    /* grid-template-columns: repeat(3 1fr); */
+    grid-template-rows: 150px 150px 150px;
+    grid-template-columns: 150px 150px 150px;
     width: 454px;
     height: 454px;
     border: 2px solid var(--border-color);
     margin: 0px auto;
+    gap: 5px;
 }
 
 .tile {
@@ -57,6 +61,7 @@ body {
     background-color: var(--tile-background);
     text-align: center;
     user-select: none;
+    border-radius: 5px;
 }
 
 .tile:hover {
